--- a/style/style.css
+++ b/style/style.css
@@ -65,33 +65,30 @@ margin-bottom: 100px;
 }
 /* Image BLOCK  */
 .image_block{background-color: #34547A; 
-position: relative;
-width: 1920px;
 height: 250px;
 margin-bottom: 100px;
+padding-top: 100px;
+
 }
 .images_position{display: inline-block;
-position: absolute;
 height: 50px;
-top: 100px;
+margin-left: 40px;
+
+
 }
-.images :last-child{right: 425px;}
-.images :first-child{left: 410px;}
-.image_2{left: 595px;}
-.image_3{left: 785px;}
-.image_4{right: 805px;}
-.image_5{right: 615px;}
+
+
 
 
     /* HOW I WORK  */
     .how_i_work{text-align: center;}
     .work_title{margin-bottom: 50px;}
-    .video_icon{width: 1110px;
+    .video_icon{
     height: 600px;
 margin-top: 65px;
 margin-bottom: 100px;}
 /* FOOTER  */
-.ending{width: 1920px;
+.ending{
 height: 151px;
 background-color: #34547A;
 color: #FFFFFF;
