--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@
     .wrap p{margin-right: 30px;
     padding: 15px 0px;}
      .wrap:nth-child(1) {background-color: #EFEFEF;
+       
     }
     .logo{padding: 20px 0px;}
     .second_nav p{
@@ -20,3 +21,45 @@
         padding: 30px 0px;
         
     }
+    .black_chair{background-image: url(/images/black_chair.png);
+    flex-direction: column;
+    
+    padding: 200px 0px 200px 405px;
+    color: #FFFFFF;
+}
+.black_chair a{border: #FFFFFF solid 1px;
+color: #FFFFFF;
+border-radius: 40px;
+padding: 10px 37.5px;}
+.black_chair p{
+    padding: 50px 0px;
+}
+.special_offers{
+    padding: 80px 670px 40px 0px;
+}
+.special_offers_list{padding-bottom: 100px;}
+.special_offers_list div{background-color: #FFFFFF;
+}
+.background_main{background-color: #EFEFEF;}
+.list_item{flex-direction: column;
+    margin-right: 30px;
+    
+}
+.list_item{}
+.pink_btn a{border: #F13C6E solid 1px;
+border-radius: 30px;
+background-color: #F13C6E;
+color: #FFFFFF;
+padding: 7px 40px;
+}
+.pink_square{background-color: #F13C6E;
+display: inline-block;
+color: #FFFFFF;
+
+}
+.pink_square input{border: #FFFFFF solid 1px;
+border-radius: 30px;
+padding: 9px 17px;}
+.email_icon{
+}
+.car_icon{}
