--- a/style/style.css
+++ b/style/style.css
@@ -4,62 +4,61 @@
     }
     ol,ul{list-style: none;}
     a{text-decoration: none;}
+    /* Main styles */
     .container{
         max-width: 1110px;
         margin: 0 auto;
     }
     .wrap{display: flex;
-    justify-content: center;}
-    .wrap p{margin-right: 30px;
-    padding: 15px 0px;}
-     .wrap:nth-child(1) {background-color: #EFEFEF;
-       
-    }
-    .logo{padding: 20px 0px;}
-    .second_nav p{
-        margin-right: 40px;
-        padding: 30px 0px;
-        
-    }
-    .black_chair{background-image: url(/images/black_chair.png);
-    flex-direction: column;
-    
-    padding: 200px 0px 200px 405px;
+    justify-content: center;
+padding: 20px 0;
+}
+/* nav panels and logo  */
+    .wrap p{margin-right: 30px;}
+    .logo{padding: 20px 0px 25px 0px;}
+    .border{border: 1px solid #EFEFEF;}
+   .gray_background{background-color: #EFEFEF;}
+   .second_nav{padding: 25px 0px 30px 0px;}
+   .nav_item p{margin-right: 40px;}
+   /* super chair on the pink background  */
+   .black_chair{background: url(/images/black_chair.png) no-repeat;}
+   .super_chair{flex-direction: column;
     color: #FFFFFF;
 }
-.black_chair a{border: #FFFFFF solid 1px;
-color: #FFFFFF;
+   .btn a{border: 1px solid #FFFFFF;
 border-radius: 40px;
-padding: 10px 37.5px;}
-.black_chair p{
-    padding: 50px 0px;
-}
-.special_offers{
-    padding: 80px 670px 40px 0px;
-}
-.special_offers_list{padding-bottom: 100px;}
-.special_offers_list div{background-color: #FFFFFF;
-}
-.background_main{background-color: #EFEFEF;}
-.list_item{flex-direction: column;
-    margin-right: 30px;
-    
-}
-.list_item{}
-.pink_btn a{border: #F13C6E solid 1px;
-border-radius: 30px;
-background-color: #F13C6E;
 color: #FFFFFF;
-padding: 7px 40px;
+padding: 10px 30px;
 }
-.pink_square{background-color: #F13C6E;
-display: inline-block;
-color: #FFFFFF;
+.super_chair p{padding: 50px 0px;}
+.super_chair{padding-top: 190px;}
+.super_chair{padding-bottom: 190px;}
+
+/* Main_block  */
+.main_block{background-color: #EFEFEF;}
+.special_offers{justify-content: flex-start;
+padding: 80px 0px 40px 0px;
+}
+.special_offers_list{ align-items: center;
 
 }
-.pink_square input{border: #FFFFFF solid 1px;
-border-radius: 30px;
-padding: 9px 17px;}
-.email_icon{
+.special_offers_list div{padding: 0px 25px;}
+.list_item{background-color: #FFFFFF;
+flex-direction: column;
+
 }
-.car_icon{}
+.list_item p{padding: 20px 0;
+margin: 0;
+align-items: center;
+text-align: center;
+}
+
+.purple{padding-bottom: 25px;
+   text-align: center;
+}
+.purple a{background-color: #F13C6E;
+border: #F13C6E;
+
+}
+/* PINK SQUARE  */
+.pink_square div:last-child{}
