--- a/style/style.css
+++ b/style/style.css
@@ -120,3 +120,12 @@ left: 335px;
     .impulse_block{padding: 100px 0 0px 0;}
     .recently_watched{}
     .second{}
+    .recently{padding-bottom: 80px;}
+    .popular_categories{flex-direction: column;}
+    .border_in_footer{padding: 60px 85px 30px 0;
+    border-bottom: 1px solid #EFEFEF;}
+    .popular_categories li{padding: 0 0 15px 0;}
+.popular_categories_list:first-child{padding-top: 25px;}
+.popular_categories_position{justify-content: space-between;
+border-bottom: 1px #EFEFEF solid;
+}
