--- a/style/style.css
+++ b/style/style.css
@@ -89,6 +89,8 @@ color: #FFFFFF;
 }
 .pink_square h3{padding-top: 40px;
 padding-left: 35px;
+font-size: 18px;
+    font-weight: 700;
 }
 .pink_square input{margin-bottom: 35px;
 margin-left: 35px;
