--- a/style/style.css
+++ b/style/style.css
@@ -10,4 +10,30 @@ ol, ul {
 
 a {
   text-decoration: none;
+}
+
+.container {
+  max-width: 1150px;
+  margin: 0 auto;
+}
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.wrap__updated {
+  padding: 140px 0 40px 0;
+}
+.wrap__frst-paragraph {
+  padding-bottom: 60px;
+}
+
+.ImgBlock {
+  flex-direction: row;
+}
+.ImgBlock .wrap__positionImg {
+  margin-right: 21px;
 }/*# sourceMappingURL=style.css.map */
