--- a/style/style.scss
+++ b/style/style.scss
@@ -7,3 +7,36 @@
     }
     ol,ul{list-style: none;}
     a{text-decoration: none;}
+
+.container{
+    max-width: 1150px;
+    margin: 0 auto;
+}
+.wrap{display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    flex-wrap: wrap;
+    &__updated{
+        padding: 140px 0 40px 0;
+    }
+    &__frst-paragraph{
+        padding-bottom: 60px;
+    }
+    
+}
+.ImgBlock{
+    flex-direction: row;
+    
+   .wrap__positionImg{
+    margin-right: 21px;
+   }
+
+
+    }
+    .paragraph{
+        @include text(16px,400,'Open Sans', sans-serif)
+    }
+    .article{@include text(32px,600,'Josefin Sans', sans-serif)}
+    .main_article{@include text(43px)}
+
